--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 /* --------------EDICIONES GENERALES-------------- */
 body {
   background-color: #FBEBB4;
@@ -13,6 +14,25 @@ body {
   background-color: #DFD99F;
 }
 
-footer {
+.footer {
   background-color: #C9C49D;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.instagram, .telefono {
+  display: flex;
+  align-items: center;
+}
+
+.instagram img, .telefono img {
+  width: 40px;
+}
+
+.card img {
+  width: 80%;
+}
+
+h1 {
+  text-align: center;
 }
