--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,12 @@
 @import "colores";
 
+@mixin flex {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 
 /* RESET */
 * {
@@ -25,3 +32,22 @@
   h1 {
     text-align: center;
   } 
+
+  footer, .instagram, .facebook, .whatsapp {
+    @include flex;
+  }
+
+  footer img {
+    width: 80%;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  a:hover {
+    color:grey;
+  }
+
+  
